--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundfinal"
+    android:background="@drawable/bg3"
 
     tools:context="com.activity.nardin.sharingbike.MainActivity">
 
@@ -48,7 +48,7 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/shape"
         android:text="SignUp"
-
+        android:layout_marginBottom="10dp"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:layout_marginLeft="25dp"
@@ -60,6 +60,7 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="140dp"
         android:layout_height="65dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/shape"
@@ -77,13 +78,13 @@
         android:layout_height="wrap_content"
 
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView2"
+        android:layout_centerVertical="true"
         android:gravity="center"
         android:text="@string/slogan"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="?android:attr/colorLongPressedHighlight"
+        android:textColor="?android:attr/colorAccent"
         android:textColorLink="@color/fbutton_color_belize_hole"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold|italic" />
 
 </RelativeLayout>
